# ml-pipeline-production-style

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py
configs/: config.yaml  logging.yaml
docs/: api.md  architecture.md  ml_lifecycle.md
src/api/: app.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/constants/: training_pipeline.py
src/entity/: artifact_entity.py  config_entity.py
src/pipelines/: prediction_pipeline.py  training_pipeline.py
src/utils/: common.py  exception.py  logger.py
tests/: test_api.py  test_data_ingestion.py  test_training_pipeline.py
workflows/: ci.yml  train.yml
